--- a/cn.zh-CN/资源类型/资源类型索引.md
+++ b/cn.zh-CN/资源类型/资源类型索引.md
@@ -1,208 +1,253 @@
-# 资源类型索引 {#concept_48893_zh .concept}
+# 资源类型索引
 
 本文为您提供资源类型索引，便于您进行查询。
 
-|API Gateway| -   [ALIYUN::ApiGateway::Api](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Api.md#)
--   [ALIYUN::ApiGateway::App](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::App.md#)
--   [ALIYUN::ApiGateway::Authorization](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Authorization.md#)
--   [ALIYUN::ApiGateway::CustomDomain](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::CustomDomain.md#)
--   [ALIYUN::ApiGateway::Deployment](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md#)
--   [ALIYUN::ApiGateway::Group](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md#)
--   [ALIYUN::ApiGateway::Signature](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md#)
--   [ALIYUN::ApiGateway::SignatureBinding](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md#)
--   [ALIYUN::ApiGateway::StageConfig](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md#)
--   [ALIYUN::ApiGateway::TrafficControl](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControl.md#)
--   [ALIYUN::ApiGateway::TrafficControlBinding](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControlBinding.md#)
--   [ALIYUN::ApiGateway::VpcAccessConfig](cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::VpcAccessConfig.md#)
-
- |
-|ActionTrail| -   [ALIYUN::ACTIONTRAIL::Trail](cn.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::Trail.md#)
--   [ALIYUN::ACTIONTRAIL::TrailLogging](cn.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::TrailLogging.md#)
-
- |
-|BSS| -   [ALIYUN::BSS::WaitOrder](cn.zh-CN/资源类型/BSS/ALIYUN::BSS::WaitOrder.md#)
-
- |
-|CDN| -   [ALIYUN::CDN::Domain](cn.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md#)
--   [ALIYUN::CDN::DomainConfig](cn.zh-CN/资源类型/CDN/ALIYUN::CDN::DomainConfig.md#)
-
- |
-|CEN| -   [ALIYUN::CEN::CenInstance](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstance.md#)
--   [ALIYUN::CEN::CenInstanceAttachment](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstanceAttachment.md#)
--   [ALIYUN::CEN::CenBandwidthPackage](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackage.md#)
--   [ALIYUN::CEN::CenBandwidthPackageAssociation](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackageAssociation.md#)
--   [ALIYUN::CEN::CenBandwidthLimit](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthLimit.md#)
--   [ALIYUN::CEN::RouteEntry](cn.zh-CN/资源类型/CEN/ALIYUN::CEN::RouteEntry.md#)
-
- |
-|CMS| -   [ALIYUN::CMS::MonitorGroup](cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md#)
-
- |
-|CS| -   [ALIYUN::CS::App](cn.zh-CN/资源类型/CS/ALIYUN::CS::App.md#)
--   [ALIYUN::CS::Cluster](cn.zh-CN/资源类型/CS/ALIYUN::CS::Cluster.md#)
-
- |
-|DNS| -   [ALIYUN::DNS::Domain](cn.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md#)
--   [ALIYUN::DNS::DomainGroup](cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md#)
--   [ALIYUN::DNS::DomainRecord](cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md#)
-
- |
-|ECS| -   [ALIYUN::ECS::AutoSnapshotPolicy](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoSnapshotPolicy.md#)
--   [ALIYUN::ECS::BandwidthPackage](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::BandwidthPackage.md#)
--   [ALIYUN::ECS::Command](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Command.md#)
--   [ALIYUN::ECS::CopyImage](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::CopyImage.md#)
--   [ALIYUN::ECS::CustomImage](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::CustomImage.md#)
--   [ALIYUN::ECS::DedicatedHost](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DedicatedHost.md#)
--   [ALIYUN::ECS::DeploymentSet](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DeploymentSet.md#)
--   [ALIYUN::ECS::Disk](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Disk.md#)
--   [ALIYUN::ECS::DiskAttachment](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DiskAttachment.md#)
--   [ALIYUN::ECS::ForwardEntry](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::ForwardEntry.md#)
--   [ALIYUN::ECS::Instance](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Instance.md#)
--   [ALIYUN::ECS::InstanceClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceClone.md#)
--   [ALIYUN::ECS::InstanceGroup](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroup.md#)
--   [ALIYUN::ECS::InstanceGroupClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroupClone.md#)
--   [ALIYUN::ECS::Invocation](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Invocation.md#)
--   [ALIYUN::ECS::JoinSecurityGroup](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::JoinSecurityGroup.md#)
--   [ALIYUN::ECS::LaunchTemplate](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::LaunchTemplate.md#)
--   [ALIYUN::ECS::NatGateway](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NatGateway.md#)
--   [ALIYUN::ECS::NetworkInterface](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterface.md#)
--   [ALIYUN::ECS::NetworkInterfaceAttachment](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfaceAttachment.md#)
--   [ALIYUN::ECS::NetworkInterfacePermission](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfacePermission.md#)
--   [ALIYUN::ECS::PrepayInstance](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstance.md#)
--   [ALIYUN::ECS::PrepayInstanceGroupClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstanceGroupClone.md#)
--   [ALIYUN::ECS::Route](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Route.md#)
--   [ALIYUN::ECS::SNatEntry](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SNatEntry.md#)
--   [ALIYUN::ECS::SecurityGroup](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroup.md#)
--   [ALIYUN::ECS::SecurityGroupClone](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupClone.md#)
--   [ALIYUN::ECS::SecurityGroupEgress](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupEgress.md#)
--   [ALIYUN::ECS::SecurityGroupIngress](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupIngress.md#)
--   [ALIYUN::ECS::Snapshot](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Snapshot.md#)
--   [ALIYUN::ECS::SSHKeyPair](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPair.md#)
--   [ALIYUN::ECS::SSHKeyPairAttachment](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPairAttachment.md#)
--   [ALIYUN::ECS::VPC](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::VPC.md#)
--   [ALIYUN::ECS::VSwitch](cn.zh-CN/资源类型/ECS/ALIYUN::ECS::VSwitch.md#)
-
- |
-|EMR| -   [ALIYUN::EMR::Cluster](cn.zh-CN/资源类型/EMR/ALIYUN::EMR::Cluster.md#)
-
- |
-|ESS| -   [ALIYUN::ESS::AlarmTask](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTask.md#)
--   [ALIYUN::ESS::AlarmTaskEnable](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTaskEnable.md#)
--   [ALIYUN::ESS::LifecycleHook](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::LifecycleHook.md#)
--   [ALIYUN::ESS::ScalingConfiguration](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingConfiguration.md#)
--   [ALIYUN::ESS::ScalingGroup](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroup.md#)
--   [ALIYUN::ESS::ScalingGroupEnable](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroupEnable.md#)
--   [ALIYUN::ESS::ScalingRule](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingRule.md#)
--   [ALIYUN::ESS::ScheduledTask](cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScheduledTask.md#)
-
- |
-|FC| -   [ALIYUN::FC::CustomDomain](cn.zh-CN/资源类型/FC/ALIYUN::FC::CustomDomain.md#)
--   [ALIYUN::FC::Function](cn.zh-CN/资源类型/FC/ALIYUN::FC::Function.md#)
--   [ALIYUN::FC::FunctionInvoker](cn.zh-CN/资源类型/FC/ALIYUN::FC::FunctionInvoker.md#)
--   [ALIYUN::FC::Service](cn.zh-CN/资源类型/FC/ALIYUN::FC::Service.md#)
--   [ALIYUN::FC::Trigger](cn.zh-CN/资源类型/FC/ALIYUN::FC::Trigger.md#)
-
- |
-|KMS| -   [ALIYUN::KMS::Key](cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md#)
--   [ALIYUN::KMS::Alias](cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md#)
-
- |
-|MarketPlace| -   [ALIYUN::MarketPlace::Image](cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Image.md#)
--   [ALIYUN::MarketPlace::ImageSubscription](cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::ImageSubscription.md#)
--   [ALIYUN::MarketPlace::Order](cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md#)
-
- |
-|Memcache| -   [ALIYUN::MEMCACHE::Instance](cn.zh-CN/资源类型/Memcache/ALIYUN::MEMCACHE::Instance.md#)
-
- |
-|MNS| -   [ALIYUN::MNS::Queue](cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md#)
--   [ALIYUN::MNS::Subscription](cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md#)
--   [ALIYUN::MNS::Topic](cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md#)
-
- |
-|MongoDB| -   [ALIYUN::MONGODB::Instance](cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md#)
--   [ALIYUN::MONGODB::PrepayInstance](cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::PrepayInstance.md#)
-
- |
-|NAS| -   [ALIYUN::NAS::AccessGroup](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md#)
--   [ALIYUN::NAS::AccessRule](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessRule.md#)
--   [ALIYUN::NAS::FileSystem](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md#)
--   [ALIYUN::NAS::MountTarget](cn.zh-CN/资源类型/NAS/ALIYUN::NAS::MountTarget.md#)
-
- |
-|OSS| -   [ALIYUN::OSS::Bucket](cn.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md#)
-
- |
-|OTS| -   [ALIYUN::OTS::Instance](cn.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md#)
--   [ALIYUN::OTS::VpcBinder](cn.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md#)
-
- |
-|PVTZ| -   [ALIYUN::PVTZ::Zone](cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md#)
--   [ALIYUN::PVTZ::ZoneRecord](cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md#)
--   [ALIYUN::PVTZ::ZoneVpcBinder](cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md#)
-
- |
-|RAM| -   [ALIYUN::RAM::AccessKey](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::AccessKey.md#)
--   [ALIYUN::RAM::AttachPolicyToRole](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToRole.md#)
--   [ALIYUN::RAM::Group](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Group.md#)
--   [ALIYUN::RAM::ManagedPolicy](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md#)
--   [ALIYUN::RAM::Role](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md#)
--   [ALIYUN::RAM::User](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::User.md#)
--   [ALIYUN::RAM::UserToGroupAddition](cn.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md#)
-
- |
-|RDS| -   [ALIYUN::RDS::Account](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md#)
--   [ALIYUN::RDS::AccountPrivilege](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::AccountPrivilege.md#)
--   [ALIYUN::RDS::DBInstance](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md#)
--   [ALIYUN::RDS::DBInstanceParameterGroup](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceParameterGroup.md#)
--   [ALIYUN::RDS::DBInstanceSecurityIps](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceSecurityIps.md#)
--   [ALIYUN::RDS::PrepayDBInstance](cn.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md#)
-
- |
-|Redis| -   [ALIYUN::REDIS::Instance](cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md#)
--   [ALIYUN::REDIS::PrepayInstance](cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::PrepayInstance.md#)
-
- |
-|ROS| -   [ALIYUN::ROS::WaitCondition](cn.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitCondition.md#)
--   [ALIYUN::ROS::WaitConditionHandle](cn.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitConditionHandle.md#)
--   [ALIYUN::ROS::Stack](cn.zh-CN/资源类型/ROS/ALIYUN::ROS::Stack.md#)
-
- |
-|SAG| -   [ALIYUN::SAG::CloudConnectNetwork](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::CloudConnectNetwork.md#)
--   [ALIYUN::SAG::ACL](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACL.md#)
--   [ALIYUN::SAG::ACLAssociation](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLAssociation.md#)
--   [ALIYUN::SAG::ACLRule](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLRule.md#)
--   [ALIYUN::SAG::SmartAccessGatewayBinding](cn.zh-CN/资源类型/SAG/ALIYUN::SAG::SmartAccessGatewayBinding.md#)
-
- |
-|SLB| -   [ALIYUN::SLB::AccessControl](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::AccessControl.md#)
--   [ALIYUN::SLB::BackendServerAttachment](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerAttachment.md#)
--   [ALIYUN::SLB::BackendServerToVServerGroupAddition](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerToVServerGroupAddition.md#)
--   [ALIYUN::SLB::Certificate](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Certificate.md#)
--   [ALIYUN::SLB::DomainExtension](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::DomainExtension.md#)
--   [ALIYUN::SLB::Listener](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Listener.md#)
--   [ALIYUN::SLB::LoadBalancer](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancer.md#)
--   [ALIYUN::SLB::LoadBalancerClone](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancerClone.md#)
--   [ALIYUN::SLB::MasterSlaveServerGroup](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md#)
--   [ALIYUN::SLB::Rule](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Rule.md#)
--   [ALIYUN::SLB::VServerGroup](cn.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md#)
-
- |
-|SLS| -   [ALIYUN::SLS::ApplyConfigToMachineGroup](cn.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md#)
--   [ALIYUN::SLS::MachineGroup](cn.zh-CN/资源类型/SLS/ALIYUN::SLS::MachineGroup.md#)
-
- |
-|UIS| -   [ALIYUN::UIS::Uis](cn.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md#)
--   [ALIYUN::UIS::UisConnection](cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md#)
--   [ALIYUN::UIS::UisNode](cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md#)
-
- |
-|VPC| -   [ALIYUN::VPC::EIP](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md#)
--   [ALIYUN::VPC::EIPAssociation](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPAssociation.md#)
--   [ALIYUN::VPC::PeeringRouterInterfaceBinding](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceBinding.md#)
--   [ALIYUN::VPC::PeeringRouterInterfaceConnection](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceConnection.md#)
--   [ALIYUN::VPC::RouterInterface](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::RouterInterface.md#)
--   [ALIYUN::VPC::SnatEntry](cn.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md#)
-
- |
+|阿里云产品|资源类型|
+|-----|----|
+|应用配置管理ACM（Application Configuration Management）|-   [ALIYUN::ACM::Configuration](/cn.zh-CN/资源类型/ACM/ALIYUN::ACM::Configuration.md)：创建配置
+-   [ALIYUN::ACM::Namespace](/cn.zh-CN/资源类型/ACM/ALIYUN::ACM::Namespace.md)：创建命名空间 |
+|操作审计（ActionTrail）|-   [ALIYUN::ACTIONTRAIL::Trail](/cn.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::Trail.md)：审计数据保存到指定的OSS存储桶中
+-   [ALIYUN::ACTIONTRAIL::TrailLogging](/cn.zh-CN/资源类型/ActionTrail/ALIYUN::ACTIONTRAIL::TrailLogging.md)：启用或关闭跟踪的日志记录 |
+|API网关（API Gateway）|-   [ALIYUN::ApiGateway::Api](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Api.md)：创建API
+-   [ALIYUN::ApiGateway::App](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::App.md)：创建应用
+-   [ALIYUN::ApiGateway::Authorization](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Authorization.md)：为API授权应用的访问权限
+-   [ALIYUN::ApiGateway::CustomDomain](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::CustomDomain.md)：为API分组创建绑定自定义域名
+-   [ALIYUN::ApiGateway::Deployment](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md)：发布API或快速切换API版
+-   [ALIYUN::ApiGateway::Group](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md)：创建API分组
+-   [ALIYUN::ApiGateway::Signature](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md)：创建后端签名密钥
+-   [ALIYUN::ApiGateway::SignatureBinding](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md)：绑定API与后端签名密钥
+-   [ALIYUN::ApiGateway::StageConfig](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md)：创建API分组中测试、预发、线上环境变量
+-   [ALIYUN::ApiGateway::TrafficControl](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControl.md)：创建用户自定义的流控策略
+-   [ALIYUN::ApiGateway::TrafficControlBinding](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::TrafficControlBinding.md)：为API绑定用户自定义流控
+-   [ALIYUN::ApiGateway::VpcAccessConfig](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::VpcAccessConfig.md)：配置VPC授权以便专有网络的API能对外提供服务 |
+|应用实时监控服务ARMS（Application Real-Time Monitoring Service）|-   [ALIYUN::ARMS::AlertContact](/cn.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContact.md)：创建报警联系人
+-   [ALIYUN::ARMS::AlertContactGroup](/cn.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContactGroup.md)：创建报警联系人分组
+-   [ALIYUN::ARMS::RetcodeApp](/cn.zh-CN/资源类型/ARMS/ALIYUN::ARMS::RetcodeApp.md)：创建前端监控任务 |
+|阿里云交易和账单管理API（BSS）|[ALIYUN::BSS::WaitOrder](/cn.zh-CN/资源类型/BSS/ALIYUN::BSS::WaitOrder.md)：等待订单结束|
+|SSL证书（SSL Certificates）|[ALIYUN::CAS::Certificate](/cn.zh-CN/资源类型/CAS/ALIYUN::CAS::Certificate.md)：添加证书|
+|内容分发网络CDN（Content Delivery Network）|-   [ALIYUN::CDN::Domain](/cn.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md)：添加加速域名
+-   [ALIYUN::CDN::DomainConfig](/cn.zh-CN/资源类型/CDN/ALIYUN::CDN::DomainConfig.md)：域名批量配置 |
+|云企业网CEN（Cloud Enterprise Network）|-   [ALIYUN::CEN::CenInstance](/cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstance.md)：创建云企业网实例
+-   [ALIYUN::CEN::CenInstanceAttachment](/cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenInstanceAttachment.md)：加载网络实例到云企业网实例中
+-   [ALIYUN::CEN::CenBandwidthPackage](/cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackage.md)：创建带宽包
+-   [ALIYUN::CEN::CenBandwidthPackageAssociation](/cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthPackageAssociation.md)：将带宽包绑定到指定的云企业网实例
+-   [ALIYUN::CEN::CenBandwidthLimit](/cn.zh-CN/资源类型/CEN/ALIYUN::CEN::CenBandwidthLimit.md)：设置带宽包中两个地域间的跨地域互通带宽
+-   [ALIYUN::CEN::RouteEntry](/cn.zh-CN/资源类型/CEN/ALIYUN::CEN::RouteEntry.md)：将加载到CEN中的VPC或VBR的路由条目发布到CEN中 |
+|云防火墙（Cloud Firewall）|-   [ALIYUN::CLOUDFW::AddressBook](/cn.zh-CN/资源类型/CLOUDFW/ALIYUN::CLOUDFW::AddressBook.md)：添加安全访问控制地址簿，包括IP地址簿、ECS标签地址簿、端口地址簿和域名地址簿。
+-   [ALIYUN::CLOUDFW::ControlPolicy](/cn.zh-CN/资源类型/CLOUDFW/ALIYUN::CLOUDFW::ControlPolicy.md)：添加访问控制策略 |
+|云监控（CloudMonitor）|-   [ALIYUN::CMS::Contact](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::Contact.md)：创建报警联系人
+-   [ALIYUN::CMS::ContactGroup](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::ContactGroup.md)：创建报警联系人组
+-   [ALIYUN::CMS::EventRule](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::EventRule.md)：创建或者修改事件的报警规则
+-   [ALIYUN::CMS::DynamicTagGroup](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::DynamicTagGroup.md)：云产品自动创建应用分组
+-   [ALIYUN::CMS::EventRuleTargets](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::EventRuleTargets.md)：添加或者修改规则的发送目标
+-   [ALIYUN::CMS::GroupMetricRule](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::GroupMetricRule.md)：创建应用分组报警规则
+-   [ALIYUN::CMS::MetricRuleTargets](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTargets.md)：添加或修改报警规则的目标
+-   [ALIYUN::CMS::MonitoringAgentProcess](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitoringAgentProcess.md)：创建进程监控
+-   [ALIYUN::CMS::MonitorGroup](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组 |
+|容器镜像服务ACR（Alibaba Cloud Container Registry）|-   [ALIYUN::CR::InstanceEndpointAclPolicy](/cn.zh-CN/资源类型/CR/ALIYUN::CR::InstanceEndpointAclPolicy.md)：为公网实例访问入口创建白名单策略
+-   [ALIYUN::CR::Namespace](/cn.zh-CN/资源类型/CR/ALIYUN::CR::Namespace.md)：创建一个新的命名空间
+-   [ALIYUN::CR::Repository](/cn.zh-CN/资源类型/CR/ALIYUN::CR::Repository.md)：创建一个新的仓库 |
+|容器服务Kubernetes版ACK（Alibaba Cloud Container Service for Kubernetes）|-   [ALIYUN::CS::AnyCluster](/cn.zh-CN/资源类型/CS/ALIYUN::CS::AnyCluster.md)：创建任意类型的Kubernetes集群实例
+-   [ALIYUN::CS::KubernetesCluster](/cn.zh-CN/资源类型/CS/ALIYUN::CS::KubernetesCluster.md)：创建Kubernetes专有版集群
+-   [ALIYUN::CS::ManagedEdgeKubernetesCluster](/cn.zh-CN/资源类型/CS/ALIYUN::CS::ManagedEdgeKubernetesCluster.md)：创建Kubernetes边缘托管版集群实例
+-   [ALIYUN::CS::ManagedKubernetesCluster](/cn.zh-CN/资源类型/CS/ALIYUN::CS::ManagedKubernetesCluster.md)：创建Kubernetes托管版集群
+-   [ALIYUN::CS::ServerlessKubernetesCluster](/cn.zh-CN/资源类型/CS/ALIYUN::CS::ServerlessKubernetesCluster.md)：创建Serverless Kubernetes集群实例 |
+|阿里云流数据处理平台DataHub|-   [ALIYUN::DATAHUB::Project](/cn.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Project.md)：创建数据总线项目
+-   [ALIYUN::DATAHUB::Topic](/cn.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Topic.md)：创建Topic |
+|数据管理DMS（Data Management Service）|[ALIYUN::DMS::Instance](/cn.zh-CN/资源类型/DMS/ALIYUN::DMS::Instance.md)：录入本企业新数据库实例|
+|云解析DNS（Alibaba Cloud DNS）|-   [ALIYUN::DNS::Domain](/cn.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md)：添加域名
+-   [ALIYUN::DNS::DomainGroup](/cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md)：添加域名分组
+-   [ALIYUN::DNS::DomainRecord](/cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md)：添加解析记录 |
+|云原生分布式数据库PolarDB-X|[ALIYUN::DRDS::DrdsInstance](/cn.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsInstance.md)：创建分布式关系型数据库|
+|数据传输服务DTS（Data Transmission Service）|-   [ALIYUN::DTS::SynchronizationJob](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::SynchronizationJob.md)：购买同步实例、配置同步作业
+-   [ALIYUN::DTS::MigrationJob](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::MigrationJob.md)：创建、配置数据迁移任务 |
+|弹性容器实例ECI（Elastic Container Instance）|-   [ALIYUN::ECI::ContainerGroup](/cn.zh-CN/资源类型/ECI/ALIYUN::ECI::ContainerGroup.md)：创建容器组
+-   [ALIYUN::ECI::ImageCache](/cn.zh-CN/资源类型/ECI/ALIYUN::ECI::ImageCache.md)：创建镜像缓存 |
+|云服务器ECS（Elastic Compute Service）|-   [ALIYUN::ECS::AutoProvisioningGroup](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoProvisioningGroup.md)：创建弹性供应组
+-   [ALIYUN::ECS::AutoSnapshotPolicy](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::AutoSnapshotPolicy.md)：自动快照策略
+-   [ALIYUN::ECS::AssignIpv6Addresses](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::AssignIpv6Addresses.md)：为弹性网卡分配一个或多个IPv6地址
+-   [ALIYUN::ECS::AssignPrivateIpAddresses](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::AssignPrivateIpAddresses.md)：为一块弹性网卡分配一个或多个辅助私有IP地址
+-   [ALIYUN::ECS::BandwidthPackage](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::BandwidthPackage.md)：创建NAT网关所使用的带宽包
+-   [ALIYUN::ECS::Command](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Command.md)：新建云助手命令
+-   [ALIYUN::ECS::CopyImage](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::CopyImage.md)：复制一个自定义镜像到其它地域
+-   [ALIYUN::ECS::CustomImage](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::CustomImage.md)：创建自定义镜像
+-   [ALIYUN::ECS::DedicatedHost](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DedicatedHost.md)：创建专有宿主机
+-   [ALIYUN::ECS::DeploymentSet](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DeploymentSet.md)：创建部署集
+-   [ALIYUN::ECS::Disk](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Disk.md)：创建数据盘
+-   [ALIYUN::ECS::DiskAttachment](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::DiskAttachment.md)：将数据盘关联到相应的ECS
+-   [ALIYUN::ECS::ForwardEntry](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::ForwardEntry.md)：配置NAT网关中的转发表
+-   [ALIYUN::ECS::HpcCluster](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::HpcCluster.md)：创建一个HPC集群
+-   [ALIYUN::ECS::Instance](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Instance.md)：创建单个ECS实例
+-   [ALIYUN::ECS::InstanceClone](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceClone.md)：基于某个ECS克隆单个新的ECS实例
+-   [ALIYUN::ECS::InstanceGroup](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroup.md)：创建一个或多个ECS实例
+-   [ALIYUN::ECS::InstanceGroupClone](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::InstanceGroupClone.md)：基于某个ECS实例克隆一个或多个新的ECS实例
+-   [ALIYUN::ECS::Invocation](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Invocation.md)：为ECS实例触发一条云助手命令
+-   [ALIYUN::ECS::JoinSecurityGroup](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::JoinSecurityGroup.md)：添加ECS到安全组
+-   [ALIYUN::ECS::LaunchTemplate](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::LaunchTemplate.md)：创建ECS实例启动模板
+-   [ALIYUN::ECS::NetworkInterface](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterface.md)：创建弹性网卡
+-   [ALIYUN::ECS::NetworkInterfaceAttachment](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfaceAttachment.md)：附加弹性网卡到专有网络
+-   [ALIYUN::ECS::NetworkInterfacePermission](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::NetworkInterfacePermission.md)：授权弹性网卡
+-   [ALIYUN::ECS::PrepayInstance](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstance.md)：创建预付费ECS实例
+-   [ALIYUN::ECS::PrepayInstanceGroupClone](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::PrepayInstanceGroupClone.md)：克隆一组预付费ECS实例
+-   [ALIYUN::ECS::Route](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Route.md)：配置专有网络路由表
+-   [ALIYUN::ECS::RunCommand](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::RunCommand.md)：在一台或多台ECS实例中执行一段Shell、PowerShell或者Bat类型的脚本。
+-   [ALIYUN::ECS::SNatEntry](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SNatEntry.md)：配置NAT网关中的SNAT表
+-   [ALIYUN::ECS::SecurityGroup](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroup.md)：创建安全组
+-   [ALIYUN::ECS::SecurityGroupClone](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupClone.md)：克隆安全组
+-   [ALIYUN::ECS::SecurityGroupEgress](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupEgress.md)：配置安全组流量出规则
+-   [ALIYUN::ECS::SecurityGroupIngress](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SecurityGroupIngress.md)：配置安全组流量入规则
+-   [ALIYUN::ECS::Snapshot](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::Snapshot.md)：创建磁盘快照
+-   [ALIYUN::ECS::SSHKeyPair](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPair.md)：创建SSH密钥对
+-   [ALIYUN::ECS::SSHKeyPairAttachment](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::SSHKeyPairAttachment.md)：绑定SSH密钥和ECS实例
+-   [ALIYUN::ECS::VPC](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::VPC.md)：创建专有网络
+-   [ALIYUN::ECS::VSwitch](/cn.zh-CN/资源类型/ECS/ALIYUN::ECS::VSwitch.md)：创建专有网络中的虚拟交换机 |
+|企业级分布式应用服务EDAS（Enterprise Distributed Application Service）|-   [ALIYUN::EDAS::Application](/cn.zh-CN/资源类型/EDAS/ALIYUN::EDAS::Application.md)：创建ECS集群的应用
+-   [ALIYUN::EDAS::Cluster](/cn.zh-CN/资源类型/EDAS/ALIYUN::EDAS::Cluster.md)：创建集群
+-   [ALIYUN::EDAS::ClusterMember](/cn.zh-CN/资源类型/EDAS/ALIYUN::EDAS::ClusterMember.md)：向集群中添加ECS实例
+-   [ALIYUN::EDAS::DeployGroup](/cn.zh-CN/资源类型/EDAS/ALIYUN::EDAS::DeployGroup.md)：创建分组
+-   [ALIYUN::EDAS::UserDefineRegion](/cn.zh-CN/资源类型/EDAS/ALIYUN::EDAS::UserDefineRegion.md)：创建或编辑自定义命名空间 |
+|阿里云Elasticsearch|[ALIYUN::ElasticSearch::Instance](/cn.zh-CN/资源类型/ElasticSearch/ALIYUN::ElasticSearch::Instance.md)：创建ElasticSearch实例|
+|弹性高性能计算（E-HPC）|[ALIYUN::EHPC::Cluster](/cn.zh-CN/资源类型/EHPC/ALIYUN::EHPC::Cluster.md)：创建一个弹性高性能计算集群|
+|阿里云E-MapReduce（Elastic MapReduce）|[ALIYUN::EMR::Cluster](/cn.zh-CN/资源类型/EMR/ALIYUN::EMR::Cluster.md)：创建一个E-MapReduce集群|
+|边缘节点服务ENS（Edge Node Service）|[ALIYUN::ENS::Instance](/cn.zh-CN/资源类型/ENS/ALIYUN::ENS::Instance.md)：创建ENS实例|
+|弹性伸缩（Auto Scaling）|-   [ALIYUN::ESS::AlarmTask](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTask.md)：创建监控项报警任务
+-   [ALIYUN::ESS::AlarmTaskEnable](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::AlarmTaskEnable.md)：启动报警任务
+-   [ALIYUN::ESS::LifecycleHook](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::LifecycleHook.md)：为伸缩组创建生命周期挂钩
+-   [ALIYUN::ESS::ScalingConfiguration](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingConfiguration.md)：创建伸缩配置
+-   [ALIYUN::ESS::ScalingGroup](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroup.md)：创建伸缩组
+-   [ALIYUN::ESS::ScalingGroupEnable](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingGroupEnable.md)：启用伸缩组
+-   [ALIYUN::ESS::ScalingRule](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScalingRule.md)：创建伸缩规则
+-   [ALIYUN::ESS::ScheduledTask](/cn.zh-CN/资源类型/ESS/ALIYUN::ESS::ScheduledTask.md)：创建定时任务 |
+|函数计算FC（Function Compute）|-   [ALIYUN::FC::Alias](/cn.zh-CN/资源类型/FC/ALIYUN::FC::Alias.md)：创建别名
+-   [ALIYUN::FC::CustomDomain](/cn.zh-CN/资源类型/FC/ALIYUN::FC::CustomDomain.md)：创建自定义域名
+-   [ALIYUN::FC::Function](/cn.zh-CN/资源类型/FC/ALIYUN::FC::Function.md)：创建函数
+-   [ALIYUN::FC::FunctionInvoker](/cn.zh-CN/资源类型/FC/ALIYUN::FC::FunctionInvoker.md)：执行函数
+-   [ALIYUN::FC::ProvisionConfig](/cn.zh-CN/资源类型/FC/ALIYUN::FC::ProvisionConfig.md)：创建预留实例
+-   [ALIYUN::FC::Service](/cn.zh-CN/资源类型/FC/ALIYUN::FC::Service.md)：创建函数计算服务
+-   [ALIYUN::FC::Trigger](/cn.zh-CN/资源类型/FC/ALIYUN::FC::Trigger.md)：触发函数
+-   [ALIYUN::FC::Version](/cn.zh-CN/资源类型/FC/ALIYUN::FC::Version.md)：发布版本 |
+|函数工作流FnF（Function Flow）|-   [ALIYUN::FNF::Flow](/cn.zh-CN/资源类型/FNF/ALIYUN::FNF::Flow.md)：创建流程
+-   [ALIYUN::FNF::Schedule](/cn.zh-CN/资源类型/FNF/ALIYUN::FNF::Schedule.md)：创建一个定时调度 |
+|实时计算（Alibaba Cloud Realtime Compute）|-   [ALIYUN::FOAS::Cluster](/cn.zh-CN/资源类型/FOAS/ALIYUN::FOAS::Cluster.md)：为独享模式订单创建集群
+-   [ALIYUN::FOAS::Project](/cn.zh-CN/资源类型/FOAS/ALIYUN::FOAS::Project.md)：在集群中创建项目 |
+|全球加速GA（Global Accelerator）|-   [ALIYUN::GA::BandwidthPackageAcceleratorAddition](/cn.zh-CN/资源类型/GA/ALIYUN::GA::BandwidthPackageAcceleratorAddition.md)：将带宽包与全球加速实例绑定
+-   [ALIYUN::GA::EndpointGroup](/cn.zh-CN/资源类型/GA/ALIYUN::GA::EndpointGroup.md)：创建终端节点组
+-   [ALIYUN::GA::IpSets](/cn.zh-CN/资源类型/GA/ALIYUN::GA::IpSets.md)：创建加速地域
+-   [ALIYUN::GA::Listener](/cn.zh-CN/资源类型/GA/ALIYUN::GA::Listener.md)：创建监听 |
+|云桌面（Cloud Desktop）|-   [ALIYUN::GWS::Cluster](/cn.zh-CN/资源类型/GWS/ALIYUN::GWS::Cluster.md)：创建集群
+-   [ALIYUN::GWS::Instance](/cn.zh-CN/资源类型/GWS/ALIYUN::GWS::Instance.md)：创建实例 |
+|物联网平台IoT（Internet of things）|-   [ALIYUN::IOT::Device](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::Device.md)：注册设备
+-   [ALIYUN::IOT::DeviceGroup](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::DeviceGroup.md)：创建分组
+-   [ALIYUN::IOT::Product](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::Product.md)：创建产品 |
+|消息队列Kafka版|[ALIYUN::KAFKA::Topic](/cn.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Topic.md)：创建Topic|
+|密钥管理服务KMS（Key Management Service）|-   [ALIYUN::KMS::Key](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
+-   [ALIYUN::KMS::Alias](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md)：为主密钥创建别名 |
+|云市场（Alibaba Cloud Marketplace）|[ALIYUN::MarketPlace::Order](/cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md)：购买云市场的资源|
+|云数据库Memcache版\( ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance](/cn.zh-CN/资源类型/Memcache/ALIYUN::Memcache::Instance.md)：创建Memcache实例
+-   [ALIYUN::Memcache::Whitelist](/cn.zh-CN/资源类型/Memcache/ALIYUN::Memcache::Whitelist.md)：创建白名单 |
+|微服务引擎MSE（Microservice Engine）|[ALIYUN::MSE::Cluster](/cn.zh-CN/资源类型/MSE/ALIYUN::MSE::Cluster.md)：创建集群|
+|消息服务MNS（Message Notification Service）|-   [ALIYUN::MNS::Queue](/cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Queue.md)：创建消息队列
+-   [ALIYUN::MNS::Subscription](/cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md)：描述订阅关系
+-   [ALIYUN::MNS::Topic](/cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md)：创建主题 |
+|云数据库MongoDB版（ApsaraDB for MongoDB）|-   [ALIYUN::MONGODB::Instance](/cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)：创建云数据库MongoDB版实例
+-   [ALIYUN::MONGODB::ShardingInstance](/cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ShardingInstance.md)：创建或者克隆MongoDB分片集群实例 |
+|文件存储NAS（Network Attached Storage ）|-   [ALIYUN::NAS::AccessGroup](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md)：创建权限组
+-   [ALIYUN::NAS::AccessRule](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessRule.md)：创建权限规则
+-   [ALIYUN::NAS::FileSystem](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md)：创建新的文件系统
+-   [ALIYUN::NAS::MountTarget](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::MountTarget.md)：创建挂载点 |
+|运维编排服务OOS（Operation Orchestration Service）|-   [ALIYUN::OOS::Execution](/cn.zh-CN/资源类型/OOS/ALIYUN::OOS::Execution.md)：启动一个执行
+-   [ALIYUN::OOS::Template](/cn.zh-CN/资源类型/OOS/ALIYUN::OOS::Template.md)：创建模版 |
+|对象存储服务OSS（Object Storage Service）|[ALIYUN::OSS::Bucket](/cn.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md)：创建OSS存储空间|
+|表格存储（Table Store）|-   [ALIYUN::OTS::Instance](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md)：创建表格存储实例
+-   [ALIYUN::OTS::VpcBinder](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md)：将表格存储实例绑定VPC
+-   [ALIYUN::OTS::Table](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::Table.md)：创建表 |
+|云数据库PolarDB|-   [ALIYUN::POLARDB::Account](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::Account.md)：为POLARDB数据库创建账号
+-   [ALIYUN::POLARDB::AccountPrivilege](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::AccountPrivilege.md)：授权普通账号访问POLARDB集群的某个数据库
+-   [ALIYUN::POLARDB::DBCluster](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBCluster.md)：创建POLARDB集群
+-   [ALIYUN::POLARDB::DBClusterAccessWhiteList](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBClusterAccessWhiteList.md)：修改允许访问数据库集群的IP名单
+-   [ALIYUN::POLARDB::DBClusterEndpoint](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBClusterEndpoint.md)：创建POLARDB自定义集群地址
+-   [ALIYUN::POLARDB::DBClusterEndpointAddress](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBClusterEndpointAddress.md)：创建POLARDB集群的公网地址
+-   [ALIYUN::POLARDB::DBInstance](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBInstance.md)：在POLARDB集群下创建一个新的数据库
+-   [ALIYUN::POLARDB::DBNodes](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBNodes.md)：增加POLARDB集群节点 |
+|云解析PrivateZone|-   [ALIYUN::PVTZ::Zone](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md)：创建PrivateZone
+-   [ALIYUN::PVTZ::ZoneRecord](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md)：添加PrivateZone的解析记录
+-   [ALIYUN::PVTZ::ZoneVpcBinder](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md)：关联或解除Zone与VPC列表两者之间的关系 |
+|访问控制RAM（Resource Access Management）|-   [ALIYUN::RAM::AccessKey](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::AccessKey.md)：获取指定用户的AccessKey
+-   [ALIYUN::RAM::AttachPolicyToRole](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToRole.md)：为指定RAM角色添加权限
+-   [ALIYUN::RAM::AttachPolicyToUser](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::AttachPolicyToUser.md)：为指定RAM用户添加权限
+-   [ALIYUN::RAM::Group](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Group.md)：创建RAM用户组
+-   [ALIYUN::RAM::ManagedPolicy](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md)：创建RAM权限策略
+-   [ALIYUN::RAM::Role](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md)：创建RAM用户
+-   [ALIYUN::RAM::User](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::User.md)：创建RAM子账号
+-   [ALIYUN::RAM::UserToGroupAddition](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md)：添加RAM用户到用户组 |
+|阿里云关系型数据库RDS（Relational Database Service）|-   [ALIYUN::RDS::Account](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md)：创建管理数据库的账号
+-   [ALIYUN::RDS::AccountPrivilege](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::AccountPrivilege.md)：授权账号访问数据库
+-   [ALIYUN::RDS::Database](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::Database.md)：在实例下创建数据库
+-   [ALIYUN::RDS::DBInstance](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md)：创建数据库实例
+-   [ALIYUN::RDS::DBInstanceParameterGroup](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceParameterGroup.md)：修改数据库参数列表
+-   [ALIYUN::RDS::DBInstanceSecurityIps](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceSecurityIps.md)：修改实例访问白名单
+-   [ALIYUN::RDS::PrepayDBInstance](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md)：创建预付费数据库实例
+-   [ALIYUN::RDS::ReadOnlyDBInstance](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::ReadOnlyDBInstance.md)：为某个实例创建一个只读实例 |
+|云数据库Redis版（ApsaraDB for Redis）|-   [ALIYUN::REDIS::Account](/cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::Account.md)：创建有特定权限的账号
+-   [ALIYUN::REDIS::Instance](/cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md)：创建云数据库Redis实例
+-   [ALIYUN::REDIS::PrepayInstance](/cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::PrepayInstance.md)：创建预付费云数据库Redis版实例
+-   [ALIYUN::REDIS::Whitelist](/cn.zh-CN/资源类型/Redis/ALIYUN::REDIS::Whitelist.md)：设置Redis实例的IP白名单 |
+|消息队列RocketMQ版|-   [ALIYUN::ROCKETMQ::Instance](/cn.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Instance.md)：创建标准版实例
+-   [ALIYUN::ROCKETMQ::Group](/cn.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Group.md)：创建客户端Group ID
+-   [ALIYUN::ROCKETMQ::Topic](/cn.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Topic.md)：创建Topic |
+|资源编排服务ROS（Resource Orchestration Service）|-   [ALIYUN::ROS::CustomResource](/cn.zh-CN/资源类型/ROS/ALIYUN::ROS::CustomResource.md)：创建自定义资源
+-   [ALIYUN::ROS::WaitCondition](/cn.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitCondition.md)：创建处理UserData消息的实例
+-   [ALIYUN::ROS::WaitConditionHandle](/cn.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitConditionHandle.md)：创建在UserData执行过程中发送消息和接收消息的实例
+-   [ALIYUN::ROS::Stack](/cn.zh-CN/资源类型/ROS/ALIYUN::ROS::Stack.md)：创建嵌套资源栈 |
+|Serverless应用引擎SAE（Serverless App Engine ）|-   [ALIYUN::SAE::Application](/cn.zh-CN/资源类型/SAE/ALIYUN::SAE::Application.md)：创建轻量级分布式应用服务应用
+-   [ALIYUN::SAE::Namespace](/cn.zh-CN/资源类型/SAE/ALIYUN::SAE::Namespace.md)：创建命名空间
+-   [ALIYUN::SAE::SlbBinding](/cn.zh-CN/资源类型/SAE/ALIYUN::SAE::SlbBinding.md)：为应用绑定SLB |
+|智能接入网关SAG（Smart Access Gateway）|-   [ALIYUN::SAG::ACLAssociation](/cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLAssociation.md)：将访问控制与智能接入网关实例绑定
+-   [ALIYUN::SAG::ACLRule](/cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACLRule.md)：添加访问控制规则
+-   [ALIYUN::SAG::CloudConnectNetwork](/cn.zh-CN/资源类型/SAG/ALIYUN::SAG::CloudConnectNetwork.md)：创建云连接网
+-   [ALIYUN::SAG::ACL](/cn.zh-CN/资源类型/SAG/ALIYUN::SAG::ACL.md)：创建访问控制
+-   [ALIYUN::SAG::GrantCcnToCen](/cn.zh-CN/资源类型/SAG/ALIYUN::SAG::GrantCcnToCen.md)：将云企业网实例授权给云连接网
+-   [ALIYUN::SAG::SmartAccessGatewayBinding](/cn.zh-CN/资源类型/SAG/ALIYUN::SAG::SmartAccessGatewayBinding.md)：将智能接入网关绑定到云连接网 |
+|负载均衡SLB（Server Load Balancer）|-   [ALIYUN::SLB::AccessControl](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::AccessControl.md)：创建访问控制策略组
+-   [ALIYUN::SLB::BackendServerAttachment](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerAttachment.md)：向负载均衡添加后端服务器
+-   [ALIYUN::SLB::BackendServerToVServerGroupAddition](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::BackendServerToVServerGroupAddition.md)：将后端服务器添加到虚拟服务器组
+-   [ALIYUN::SLB::Certificate](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Certificate.md)：上传证书
+-   [ALIYUN::SLB::DomainExtension](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::DomainExtension.md)：创建扩展域名
+-   [ALIYUN::SLB::Listener](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Listener.md)：创建负载均衡监听
+-   [ALIYUN::SLB::LoadBalancer](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancer.md)：创建负载均衡实例
+-   [ALIYUN::SLB::LoadBalancerClone](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::LoadBalancerClone.md)：克隆负载均衡实例
+-   [ALIYUN::SLB::MasterSlaveServerGroup](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md)：创建主备服务器组
+-   [ALIYUN::SLB::Rule](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Rule.md)：为HTTP或HTTPS监听添加转发规则
+-   [ALIYUN::SLB::VServerGroup](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md)：创建虚拟服务器组并添加后端服务器到负载均衡实例 |
+|日志服务SLS（Log Service）|-   [ALIYUN::SLS::ApplyConfigToMachineGroup](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md)：将日志服务的日志配置应用于机器组
+-   [ALIYUN::SLS::Index](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Index.md)：为指定的Logstore创建索引
+-   [ALIYUN::SLS::Logstore](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Logstore.md)：日志项目下创建日志库
+-   [ALIYUN::SLS::MachineGroup](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::MachineGroup.md)：创建日志服务机器组
+-   [ALIYUN::SLS::Project](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Project.md)：创建日志项目
+-   [ALIYUN::SLS::LogtailConfig](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::LogtailConfig.md)：配置采集数据时的Logtail参数 |
+|极致互联网服务UIS（Ultimate Internet Service）|-   [ALIYUN::UIS::Uis](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md)：创建UIS实例
+-   [ALIYUN::UIS::UisConnection](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md)：创建隧道连接
+-   [ALIYUN::UIS::UisNode](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md)：为已创建的实例添加上车点实例 |
+|专有网络VPC（Virtual Private Cloud）|-   [ALIYUN::VPC::CommonBandwidthPackage](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackage.md)：创建共享带宽实例
+-   [ALIYUN::VPC::CommonBandwidthPackageIp](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::CommonBandwidthPackageIp.md)：添加EIP到共享带宽中
+-   [ALIYUN::VPC::CustomerGateway](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::CustomerGateway.md)：创建用户网关
+-   [ALIYUN::VPC::EIP](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::EIP.md)：申请弹性公网IP
+-   [ALIYUN::VPC::EIPAssociation](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::EIPAssociation.md)：绑定弹性公网IP
+-   [ALIYUN::VPC::GrantInstanceToCen](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::GrantInstanceToCen.md)：为云企业网实例授权
+-   [ALIYUN::VPC::Ipv6Gateway](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::Ipv6Gateway.md)：创建IPv6网关
+-   [ALIYUN::VPC::Ipv6InternetBandwidth](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::Ipv6InternetBandwidth.md)：为IPv6地址购买公网带宽
+-   [ALIYUN::VPC::PeeringRouterInterfaceBinding](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceBinding.md)：绑定将要互联的两个路由器接口信息
+-   [ALIYUN::VPC::PeeringRouterInterfaceConnection](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceConnection.md)：发起路由器接口链接
+-   [ALIYUN::VPC::RouterInterface](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::RouterInterface.md)：创建路由器接口
+-   [ALIYUN::VPC::RouteTable](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::RouteTable.md)：创建自定义路由表
+-   [ALIYUN::VPC::RouteTableAssociation](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::RouteTableAssociation.md)：绑定自定义路由表和同一VPC内的交换机
+-   [ALIYUN::VPC::SnatEntry](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::SnatEntry.md)：在SNAT列表中添加SNAT条目
+-   [ALIYUN::VPC::SslVpnClientCert](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::SslVpnClientCert.md)：创建SSL-VPN客户端证书
+-   [ALIYUN::VPC::SslVpnServer](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::SslVpnServer.md)：创建SSL-VPN服务端
+-   [ALIYUN::VPC::VpnConnection](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnConnection.md)：创建IPsec连接
+-   [ALIYUN::VPC::VpnGateway](/cn.zh-CN/资源类型/VPC/ALIYUN::VPC::VpnGateway.md)：创建VPN网关 |
+|视频监控（Video Surveillance）|[ALIYUN::VS::Group](/cn.zh-CN/资源类型/VS/ALIYUN::VS::Group.md)：创建业务空间|
+|Web应用防火墙WAF（Web Application Firewall）|-   [ALIYUN::WAF::AclRule](/cn.zh-CN/资源类型/WAF/ALIYUN::WAF::AclRule.md)：为指定域名添加精准访问控制规则
+-   [ALIYUN::WAF::DomainConfig](/cn.zh-CN/资源类型/WAF/ALIYUN::WAF::DomainConfig.md)：添加域名配置信息
+-   [ALIYUN::WAF::WafSwitch](/cn.zh-CN/资源类型/WAF/ALIYUN::WAF::WafSwitch.md)：打开或关闭Web攻击防护功能开关 |
 
