--- a/cn.zh-CN/产品简介/什么是资源编排服务.md
+++ b/cn.zh-CN/产品简介/什么是资源编排服务.md
@@ -4,6 +4,8 @@
 
 ![资源编排](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6393459951/p76489.png)
 
+资源编排产品介绍视频如下：
+
 
 
 ## 免费服务托管
