--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -1,10 +1,23 @@
-# 使用限制 {#concept_28854_zh .concept}
+# 使用限制
 
-本文为您介绍资源编排服务（ROS）的使用限制。
+本文列举了资源编排服务ROS（Resource Orchestration Service）的使用限制。
 
-您在使用ROS时，需要注意以下几点：
+|限制项|限制值|
+|---|---|
+|每个阿里云账号允许创建的最大资源栈个数|200|
+|每个阿里云账号允许创建的最大模板个数|100|
+|每个阿里云账号允许创建的最大资源栈组个数|100|
+|每个阿里云账号在同一资源栈组中允许创建的最大实例个数|2000|
+|每个阿里云账号在同一地域同时对资源栈组执行操作的最大次数|3500|
+|每个阿里云账号在同一资源栈中允许创建的最大更改集个数|20|
+|每个资源栈中允许创建的最大资源数|200|
+|每个嵌套资源栈允许嵌套的最大层数|5|
+|资源栈超时时间的最大值|1440分钟（24小时）|
+|资源栈超时时间的最小值|10分钟|
+|每个模板文件内容的最大值|512KB|
+|自定义资源响应内容的最大值|4096KB|
+|每个更改集文件内容的最大值|2048KB|
+|每个资源栈策略文件内容的最大值|16KB|
 
--   每个资源栈允许创建的最大资源数为200个。
--   每个用户允许创建的资源栈数最大为50个。
--   每个模板文件的大小不超过512KB。
+**说明：** 本文仅展示了各限制项的默认配额。对于可以调整配额的限制项，您可以前往[配额中心](https://quotas.console.aliyun.com)申请提升配额。配额中心现已支持多个云产品，请参见[配额中心支持的云产品]()。
 
